klkdir = $(KLK_PYTHON_PREFIX_PATH)/klk
klk_PYTHON=server.py \
 __init__.py \
 paths.py \
 mediatypes.py \
 common.py \
 db.py \
 defines.py \
 factory.py \
 config.py \
 msg.py \
 climsg.py

klktestdir = $(KLK_TEST_PYTHON_PREFIX_PATH)
klktest_PYTHON = \
 testserver.py \
 testconfig.py \
 testcommon.py 

EXTRA_DIST=paths.py.in mediatypes.py.in defines.py.in msg.py.in climsg.py.in
